--- a/analysis/FW_cogsci.Rmd
+++ b/analysis/FW_cogsci.Rmd
@@ -44,7 +44,15 @@ df_turk %<>%
          dataset = "MTurk")
 
 df_cdm$agesplit <- cut(df_cdm$age, breaks=c(0,12,24))
+df_info$age.grp <- (cut(df_info$age, breaks = c(-0, seq(2, 30, 2))))
 df_info$agesplit <- cut(df_info$age, breaks=c(0,12,24))
+
+df_info %<>%
+  mutate(currage.grp = cut(age_current, breaks = c(0, seq(2,50,2)))) # grouping current age for bias analysis
+
+#hacky stuff for reporting bias
+df_cdm$age.grp <- df_cdm$age
+df_cdm$currage.grp <- df_cdm$age_current
 ```
 
 bind together.
@@ -213,9 +221,23 @@ freqs <- bind_rows(select(d.age,word,dataset),
   group_by(dataset)
 ```
 
-Plot a table of top 5 words by dataset
+---
+SES and age reporting biases for turk, cdm and info data
+
+First, age 
 ```{r}
-#Tried doing this, did end up doing it correctly...needs to be done
+freqs <- bind_rows(select(d,age.grp, currage.grp,dataset)) %>%
+  filter(age.grp != "NA", currage.grp != "NA", currage.grp != "0to3") %>%
+  group_by(dataset, age.grp, currage.grp) %>%
+  summarise(n=n()) %>%
+  group_by(dataset) %>%
+  mutate(sum = sum(n), prop = n/sum) 
+
+```
+
+
+```{r}
+
 ```
 
 Plot!
@@ -242,7 +264,7 @@ First get wordbank CIs.
 
 ```{r}
 wg.producers <- wg.data %>%
-  group_by(age) %>%
+ group_by(age) %>%
   summarise(prop = sum(productive > 0)/n()) %>%
   mutate(dataset = "Wordbank")
 
