now includes table! needs to be prettified though

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -9,6 +9,8 @@
 \usepackage{graphicx}
 \usepackage{topcapt}
 \usepackage{color}
+\usepackage[english]{babel}
+
 
 
 \title{Large scale investigations of variability in early language production}
@@ -125,7 +127,29 @@ In this analysis, CDI categories were assigned by the researcher based on the MB
 \caption{Figure 2: Histogram of CDI category frequencies across datasets.}
 \end{figure}
 
-Distributions of CDI category frequency across all 4 datasets look quite similar. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain almost identical. \\
+Distributions of CDI category frequency across all 4 datasets look quite similar. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain very similar, as are the individual first words within the datasets (collapsed across ages, Figure 3).\\
+
+
+
+%FIGURE 3
+
+\begin{table}[h]
+\begin{center}
+\begin{tabular}{ | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | }
+    \hline
+    CDM & MTurk & Info & Wordbank \\ \hline
+    Ball\newline(n = 51) & Dog\newline(n = 110) & Up\newline (n=3) & Baa Baa\newline (n=16) \\ \hline
+    Hi\newline (n = 29) & No\newline (n = 108) & More\newline (n = 3) & Uh-Oh\newline (n = 7) \\ \hline
+    Dog\newline (n = 29) & Ball\newline (n = 102) & Hi\newline (n = 2) & Yum Yum\newline (n = 3) \\ \hline
+    Uh-Oh\newline (n = 21) & Bottle\newline (n = 76) & Cat\newline (n = 2) & Woof Woof\newline (n=3) \\ \hline
+    Duck\newline (n = 16) & Hi\newline (n = 57) & Bye\newline (n = 2) & Hi\newline (n = 3) \\ \hline		
+    \end{tabular}
+\caption{Figure 3: Most frequent first words by dataset.}\
+\end{center}
+\end{table}
+
+
+
 Animals, Games and Routines, Toys, and People, followed closely by Food and Drink are frequent first word categories, and seem to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank is sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the MB-CDI. Only (XX) children produced only exactly word in this group. \\
 Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories. This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not just the result of a cognitive shift, but an ability to produce and form words. \\
 However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
