table but it is not centered correctly

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -11,6 +11,8 @@
 \usepackage{topcapt}
 \usepackage{color}
 \usepackage[english]{babel}
+\usepackage{array}
+\usepackage{pbox}
 
 
 
@@ -147,20 +149,20 @@ Despite producing a first word during different points in their conceptual devel
 
 %FIGURE 3
 
-\begin{table}[h]
-\begin{center}
-\begin{tabular}{ | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | }
-    \hline
+
+{\centering
+\begin{tabular}{ | c | c | c | c | }
+ \hline
     CDM & MTurk & Info & Wordbank \\ \hline
-    Ball\newline(n = 51) & Dog\newline(n = 110) & Up\newline (n=3) & Baa Baa\newline (n=16) \\ \hline
-    Hi\newline (n = 29) & No\newline (n = 108) & More\newline (n = 3) & Uh-Oh\newline (n = 7) \\ \hline
-    Dog\newline (n = 29) & Ball\newline (n = 102) & Hi\newline (n = 2) & Yum Yum\newline (n = 3) \\ \hline
-    Uh-Oh\newline (n = 21) & Bottle\newline (n = 76) & Cat\newline (n = 2) & Woof Woof\newline (n=3) \\ \hline
-    Duck\newline (n = 16) & Hi\newline (n = 57) & Bye\newline (n = 2) & Hi\newline (n = 3) \\ \hline		
-    \end{tabular}
-\caption{Figure 3: Most frequent first words by dataset.}\
-\end{center}
-\end{table}
+    Ball\newline(n = 51) & Dog\newline(n = 110) & Up\newline(n=3) & Baa Baa\newline(n=16) \\ \hline
+    Hi\newline(n = 29) & No\newline(n = 108) & More\newline(n = 3) & Uh-Oh\newline(n = 7) \\ \hline
+    Dog\newline(n = 29) & Ball\newline(n = 102) & Hi\newline(n = 2) & Yum Yum\newline(n = 3) \\ \hline
+    Uh-Oh\newline(n = 21) & Bottle\newline(n = 76) & Cat\newline(n = 2) & Woof Woof\newline(n=3) \\ \hline
+    Duck\newline(n = 16) & Hi\newline(n = 57) & Bye\newline(n = 2) & Hi\newline(n = 3) \\ \hline		
+ \end{tabular}
+}
+
+
 
 However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
 
