Intro things are happening

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -35,11 +35,16 @@ language acquisition
 
 %%INTRODUCTION%%%%
 \section{Introduction}
-A child's first word is a pivotal moment in a child's development, the start of a verbal dialogue that will continue and develop over the course of a child's life. The first word is not only important because it marks the beginning of a child's productive language capabilities, but it also offers a small glimpse into the mind of an infant. A first utterance gives insight into what a child is willing to talk about as well as what a child is able to talk about, both in terms of conceptual categories and phonological production. While there has been much research of the development of children's general vocabulary development (citation here), there has been little research done on a child's first word. This is understandable, as it is a discrete event almost exclusively involving only the parent and child. \\
-- Paragraph - first word comprehension - Bergelson and Swingley\\
-- Paragraph - Why are we interested in first productions?\\
-- Paragraph - parent report - advantages and drawbacks \\
-- Paragraph - summary of our work\\
+What can children's first words reveal about the process by which humans acquire language? Over the course of the first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate (citation about vocabulary acquisition here). The first word marks the beginning of productive verbal language, and is an important and measurable insight into what a child is willing and able to talk about at that point in their development. 
+
+Comprehension of language precedes its production for infants. Research from Bergelson and Swingley (2012) has suggested that as early as 6 months many children already understand what many common nouns mean, instead of just recognizing and segmenting speech sounds (cite bergelson and swingley here). Cognitively, children are capable of successfully mapping a label to an object very early; however, productive language emerges later, and goes through intense phonological and morphological changes throughout development (citation here). If children are able to grasp the meanings of words from a very early age, why does a lag exist between comprehension and production?
+
+The first word is the start of productive linguistic capabilities, and is an important method for studying language acquisition. While there has been much research on the development of language over the course of the first few years, there has been less research focusing specifically first words. First word occurences are discrete and instantaneous events which almost exclusively involve only the child and parent, and are almost impossibly to observe in a lab setting. However, despite the scarcity of data, first word productions are important because they mark the very beginnings of the intersection of cognitive and linguistic capabilities. 
+
+
+Although a child's first word is unlikely to occur in an experimental setting, almost every child produces a first word, and this event is highly memorable for parents. Therefore, we explored first words on a large-scale through parental self report across 4 separate populations. This measure of children's first words has obvious drawbacks and advantages. One issue with any self-report measure is that there is no way to validate participants' responses. Another complication is whether parents were reporting the first true occurrence of a word, or merely babble. However, the data we received from these surveys was generally very consistent, both within and across datasets, indicating that parents responded appropriately. In addition to yielding consistent data, our first word surveys were highly effective, and were completed quickly and with minimal effort by many parents. To counter the potential issues presented by using a self-report measure, we were very careful in selecting our participant populations. 
+
+Using data collected from 4 different populations, we investigate the timeline of the emergence of productive language and some of the factors that may predict individual differences. Specifically, we look at the timecourse of first word production, and find evidence for word production prior to 12 months. An analysis of differences in conceptually different referents of first words for early versus later producers shows that older speakers do not first speak about semantically different things. Finally, we turn to factors that might affect first word production such as frequency of parental input and phonetic probability, and find ... something.  
 
 %%GENERAL DATA METHODS%%
 \section{General Data Collection Methods}
